# ApplyGenius

./: .env.example  .gitignore  CLAUDE.md  DESIRED_FEATURES.md  README.md  TESTING.md  UI_IMPLEMENTATION.md  cv.html  cv_converter.py  pyproject.toml  requirements.txt  requirements_test.txt  run_ui.sh  test_job_offer_incorporation.py
logs/: 2025-06-14_13-34-51_research_task.md  2025-06-14_13-37-36_edit_task.md  2025-06-14_13-37-36_newsletter_task.html  2025-06-14_13-37-36_research_task.md
src/cv_gen/: crew.py  main.py
src/cv_gen/config/: agents.yaml  cv_template.html  job_offer.json  job_offer.md  job_offer.txt  tasks.yaml
src/cv_gen/tools/: tools.py
src/gui/: README.md  app.py
src/newsletter_gen/: crew.py  main.py
src/newsletter_gen/config/: agents.yaml  cv_template.html  tasks.yaml
src/newsletter_gen/tools/: tools.py
tests/: URL_SCRAPING.md  cv_converter.py  test_scrape_tool.py  test_ui.py
