[tool.poetry]
name = "inverstor_insight"
version = "0.1.0"
description = "newsletter-gen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.7"}
exa-py = "^1.0.9"
langchain = "^0.1.17"
langchain-core = "^0.1.52"
langchain-community = ">=0.0.36,<0.1"
langchain-anthropic = "^0.1.11"
langchain-groq = "^0.1.3"
langchain-openai = "^0.0.5"
langchain-google-genai = "^1.0.3"
pillow = "^10.3.0"
python-dotenv = "^1.0.0"
pypdf2 = "^3.0.1"
playwright = "^1.40.0"
jinja2 = "^3.1.2"
streamlit = "^1.46.1"
dotenv = "^0.9.9"

[tool.poetry.scripts]
inverstor_insight = "inverstor_insight.main:run"
cv_gen = "cv_gen.main:run"
cv_gen_app = "cv_gen.gui.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"